<resources>
    <string name="app_name">Renformer</string>
    <string name="title_activity_user_management">User management</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register"><u>Register here for free!</u></string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="customer_button">START</string>
    <string name="company_button">COMPANY ACCESS</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_account">New account</string>
    <string name="snack_bar_text">User deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="tab_admins">Admins</string>
    <string name="tab_managers">Managers</string>
    <string name="tab_customers">Customers</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_content">Manage content</string>
    <string name="button_users">Manage users</string>
    <string name="back">BACK</string>
    <string name="go_back_admin_panel_button">Go back to admin panel</string>
    <string name="user_info">User info</string>
    <string name="id">ID</string>
    <string name="admin">Admin</string>
    <string name="manager">Manager</string>
    <string name="customer">Customer</string>
    <string name="surname">Surname</string>
    <string name="save">Save</string>
    <string name="change_user_role">Change user role</string>
    <string name="email">Email</string>
    <string name="save_role_button">Save user role</string>
    <string name="admin_panel_title">Admin panel</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="new_user_account">New user account</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="manager_panel">Manager panel</string>
    <string name="password">Password</string>
    <string name="delete_account"><u>Delete account</u></string>
    <string name="edit">Edit</string>
    <string name="go_back">Go back</string>
    <string name="register_info_hint">You may fill more details later.</string>
    <string name="create_user">Create user</string>
    <string name="new_user">New user</string>
    <string name="user_role">User role</string>
    <string name="title_activity_admin_management">AdminManagementActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="manage_users">Manage users</string>
    <string name="manager_management">Manage managers</string>
    <string name="admin_list">Admins list</string>
    <string name="manager_list">Manager list</string>
    <string name="customer_list">Customers list</string>
    <string name="no_account_yet">Don\'t have an account yet?</string>
    <string name="exit">Exit</string>
    <string name="edit_user">Edit user</string>
    <string name="user_id">User ID</string>
    <string name="user_email">User email</string>
    <string name="edit_user_role">Edit user role</string>
    <string name="list">List</string>
    <string name="delete_user">Delete user</string>
    <string name="no_users_found">No users found.</string>
    <string name="delete_user_account">Delete user account</string>
    <string name="admin_panel">Admin panel</string>
    <string name="account_settings">Account settings</string>
    <string name="users_sort">Users are sorted alphabetically by email</string>
    <string name="my_info">My info</string>
    <string name="title_activity_user_list_new">UserListActivityNew</string>
    <string name="home_arrow">Home arrow</string>
    <string name="back_to_logout">Please click back again to logout.</string>
    <string name="title_reformtype_list">ReformTypes</string>
    <string name="title_reformtype_detail">ReformType Detail</string>
    <string name="categories_title">Categories</string>
    <string name="reform_types_title">Reform manager</string>
    <string name="attributes_title">Attributes</string>
    <string name="multiplier_factor">Multiplier factor</string>
    <string name="factor">Factor</string>
    <string name="delete_category">Delete category</string>
    <string name="add_category_button">Create category</string>
    <string name="add_attribute_button">Create attribute</string>
    <string name="no_categories">No categories yet</string>
    <string name="no_attributes">No attributes yet</string>
    <string name="options">Options</string>
    <string name="delete_attribute">Delete attribute</string>
    <string name="view_content_button">View content</string>
    <string name="title_reformtypeview_list">ReformTypesView</string>
    <string name="title_reformtypeview_detail">ReformTypeView Detail</string>
    <string name="my_panel">My panel</string>
    <string name="view_content">View content</string>
    <string name="price_label">Price</string>
    <string name="delete_option_label">Delete option</string>
    <string name="price_box">Price</string>
    <string name="create">Create</string>
    <string name="create_option">Create option</string>
    <string name="create_option_instruction">You may create the options through the Option List.</string>
    <string name="reform_type">Reform type</string>
    <string name="category_title">Category</string>
    <string name="attribute_title">Attribute</string>
    <string name="delete_reform_type">Delete reform type</string>
    <string name="reform_setttings">Reform setttings</string>
    <string name="square_meters">Square meters</string>
    <string name="submit">Submit</string>
    <string name="attribute_options_hint">Tap any attribute to manage its options</string>
    <string name="option_title">Option</string>
    <string name="reforms_menu_title">Pick your reform</string>
    <string name="no_options">No options yet</string>
    <string name="meter_price">Meter price</string>
    <string name="reform_square_meter_price">Base price (per square meter)</string>
    <string name="square_meter_price">Square meter price</string>
    <string name="new_reform_type">New reform type</string>
    <string name="user_budgets">User budgets</string>
    <string name="my_budgets">My budgets</string>
    <string name="view_my_budgets">View my budgets</string>
    <string name="budget_title">Budget</string>
</resources>
